tools/sddl2/assembler/tests/success/push_i32_min.asm
push.i32 -2147483648
halt
