tools/sddl2/assembler/tests/fail/push_i32_underflow.asm
# EXPECT-ERROR: out of range
push.i32 -2147483649
halt
